--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "updb @ git+https://github.com/SergeiMinaev/updb",
     "ws-watcher @ git+https://github.com/SergeiMinaev/ws_watcher",
+    "css-bundler @ git+https://github.com/SergeiMinaev/css-bundler",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
