--- a/back/Cargo.toml
+++ b/back/Cargo.toml
@@ -11,18 +11,20 @@ argon2 = "0.5"
 async-lock = "3.3"
 isahc = { version = "1.7", features = ["default"] }
 futures-lite = "1"
-urlmatch = {git = "https://github.com/SergeiMinaev/urlmatch"}
-lpsql= {git = "https://github.com/SergeiMinaev/lpsql.rs"}
-#lpsql= {path = "/work/lpsql"}
 once_cell = "1.19"
-saras = {git = "https://github.com/SergeiMinaev/saras.rs"}
-#saras = {path = "/work/saras"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8"
 validator = { version = "0.16", features = ["derive"] }
-#img-shrink = {path = "/work/img-shrink"}
 chrono = "0.4"
+
+urlmatch = { git = "https://github.com/SergeiMinaev/urlmatch" }
+lpsql= { git = "https://github.com/SergeiMinaev/lpsql.rs" , optional=true }
+saras = { git = "https://github.com/SergeiMinaev/saras.rs" }
+#urlmatch = {path = "/work/urlmatch" }
+#lpsql= {path = "/work/lpsql", optional=true }
+#saras = { path = "/work/saras" }
+
 
 [profile.dev]
 strip = true
